--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ footer {
 
 
 .bit-container {
-    width: 400px;
+    max-width: 400px;
     display:grid; 
     margin:auto;
     grid-template-columns: 100px auto; 
